--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,18 @@
-* {
-    padding: 0;
-    margin: 0;
+@import "common.scss";
+@import "_mixin.scss";
+.wrap {
+    width: 100%;
+    height: 100%;
+    @include box_flex;
+    @include align;
+    @include justify;
+    .list {
+        height: 70px;
+        line-height: 70px;
+        text-align: center;
+        border-radius: 22px;
+        color: #fff;
+        width: 80%;
+        background: green;
+    }
 }
